--- a/src/css/start.module.css
+++ b/src/css/start.module.css
@@ -80,6 +80,7 @@
   background-color: transparent;
   border: 1px solid grey;
   font-family: Inter;
+  cursor: pointer;
 }
 
 
@@ -108,6 +109,7 @@
     margin-top: 10px;
     max-width: 100%;
     height: auto;
+    display: block;
   }
 
   .logoImg {
