--- a/src/css/start.module.css
+++ b/src/css/start.module.css
@@ -91,23 +91,24 @@ body{
 .inputbox{
   width:75%;
   height: 7vh;
-  /* border: 2px solid rgb(201, 55, 55); */
+  border: 1px solid rgb(18, 17, 17);
   margin-left: 12%;
   border-radius: 5px;
   align-items: center;
   font-family: Inter;
+  margin-top: 10%;
 }
 
 input{
   width:100%;
-  height: 100%;
-  border: 1px solid grey;
-  border-radius: 5px;
+  height: 7vh;
+  /* border: 1px solid grey; */
+  /* border-radius: 5px; */
   font-size: 0.875rem;
   opacity: 0.;
   font-weight: 400;
   font-family: Inter;
-  margin-top: 13%;
+  /* margin-top: 10%; */
 }
 .arrowicon{
   width: 10%;
@@ -134,13 +135,11 @@ input{
   margin-left: 20%;
   width: 10px;
   height: 10px;
-  margin-top: 30%;
+  margin-top: 0%;
 }
 .checkText{
 font-size: 0.65625rem;
-margin-top: 26%;
-
-
+margin-top: 3%;
 }
 .administration{
   width: 50%;
