--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -17,7 +17,7 @@ body {
 .maindiv {
   width: 80%;
   height: 120vh;
-  border: 2px solid red;
+  
   display: flex;
   flex-direction: column;
   margin-left: 10%;
@@ -26,9 +26,9 @@ body {
 .navbardiv {
   display: flex;
   justify-content: space-between;
-  background-color: lightgray;
+  background-color: white;
   padding: 10px;
-  height: 8%;
+  height: 5%;
   
 }
 
@@ -51,14 +51,18 @@ body {
 
 .line {
   height: 2px;
-  background-color: black; /* Horizontal line styling */
+  width: 100%;
+  
+  background-color: black;
+ /* Horizontal line styling */
 }
 
 .bannerdiv {
   flex-grow: 1;
   background-color: lightblue;
   max-height: 300px;
-  border: 2px solid black;
+  margin-top: 1%;
+ 
 }
 .bannerImg{
   width: 100%;
@@ -76,22 +80,23 @@ body {
   border-radius: 1%;
 }
 .gridCard {
-  border: 2px solid red; /* Add a red border to each card */
+ 
   height: 40vh;
   width: 105%;
   margin-left: -3%;
   border-radius: 5%;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 .gridImg{
   width: 100%;
-  height: 60%;
-  border: 1px solid teal;
+  height: 65%;
+  
   
 }
 .gridText{
   width: 100%;
   height:38%;
-  border: 1px solid gold;
+  
 }
 .cardimg{
   width: 100%;
@@ -101,7 +106,7 @@ body {
 .gridTitle{
   width: 50%;
   font-family: Inter;
-  border: 2px solid black;
+  
   font-weight: 700;
   font-size: 0.9375rem;
   margin-left: 5%;
@@ -110,7 +115,7 @@ body {
 }
 .subTitle{
   width: 80%;
-  border: 2px solid red;
+  
   font-size: 0.6875rem;
   font-family: Inter;
   font-weight: 400;
@@ -120,6 +125,21 @@ body {
   
   
 }
+/* Add these styles at the end of your home.module.css file */
+.fixedNavbar {
+  width: 100%;
+  height: 5%;
+  border: 2px solid black;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: white;
+  padding: 10px;
+  z-index: 999; /* Ensure the navbar appears above other content */
+  box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.1); /* Add a shadow to separate it from content */
+}
+
 /* Media Queries for responsive design */
 @media screen and (max-width: 768px) {
   .navbardiv {
